@@ -25,6 +25,7 @@
   Made the use of CredSSP for RDP connections optional.
   Updated VncSharpNG to version 1.2.4440.36644.
   Added debugging symbols for VncSharpNG.
+  Improved the use of Tab and Shift-Tab to cycle through entries in the Config grid.
 
 1.69 (2011-12-09):
   Fixed issue #66 - Fresh Install Fails to Create Config
